hello-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: default
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-container
          image: k8s.gcr.io/echoserver:1.4
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3001
      nodePort: 30101
