nginx-ClusterIP.yaml
# Mauro - 20/08/21
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: mauro-teste
  labels:
    app: nginx-teste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-teste
  template:
    metadata:
      labels:
        app: nginx-teste
    spec:
      containers:
        - name: nginx-deployment
          image: nginx:1.21.1-apine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: mauro-teste
spec:
  selector:
    app: nginx-teste
  ports:
    - name: http
      protocol: TCP
      port: 3010
      targetPort: 80
