kiali-istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - curso.local
  gateways:
    - comum/curso-http-gateway
  http:
    - match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali
            port:
              number: 20001
    - route:
        - destination:
            host: curso-service
            port:
              number: 3005
